@@ -5,5 +5,5 @@
 
 #endif // __GNUC__
 #ifdef _MSC_VER
-#pragma warning(pop)
+#  pragma warning(pop)
 #endif
