@@ -70,9 +70,12 @@ public:
   using raw_line =
     std::pair<std::unique_ptr<char, std::function<void(char *)>>, std::size_t>;
 
-  // TODO: Change to "named constructor" style.
-  /// Execute query, and stream over the results.
-  /** The query can be a SELECT query or a VALUES query; or it can be an
+  /**
+   * @name Streaming queries
+   *
+   * You can use @c stream_from to execute a query, and stream its results.
+   *
+   * The query can be a SELECT query or a VALUES query; or it can be an
    * UPDATE, INSERT, or DELETE with a RETURNING clause.
    *
    * The query is executed as part of a COPY statement, so there are additional
@@ -81,27 +84,44 @@ public:
    *
    *     https://www.postgresql.org/docs/current/sql-copy.html
    */
+  //@{
+  /// Factory: Execute query, and stream the results.
+  static stream_from query(transaction_base &tx, std::string_view q)
+  {
+    return stream_from{tx, from_query, q};
+  }
+
+  /// Execute query, and stream over the results.
+  /** This is the awkward way to construct a @c stream_from.  It uses a marker
+   * argument type to disambiguate overloads.
+   *
+   * Where possible, use factory function @c query() instead.
+   */
   stream_from(transaction_base &, from_query_t, std::string_view query);
+  //@}
+
+  /**
+   * @name Streaming tables
+   *
+   * You can use @c stream_from to read a table's contents.
+   *
+   * Streaming does not work from a view, and the table name cannot include a
+   * schema name, and there are no guarantees about ordering.  If you need any
+   * of those things, consider streaming from a query instead.
+   */
+  //@{
+  // TODO: Replace constructors with factories.  Use Concepts.
 
   /// Stream all rows in table, all columns.
-  /** The table name cannot include a schema name.  If you need to specify a
-   * schema name, stream from a query rather than from a table.
-   */
   stream_from(transaction_base &, from_table_t, std::string_view table);
 
   /// Stream given columns from all rows in table.
-  /** The table name cannot include a schema name.  If you need to specify a
-   * schema name, stream from a query rather than from a table.
-   */
   template<typename Iter>
   stream_from(
     transaction_base &, from_table_t, std::string_view table,
     Iter columns_begin, Iter columns_end);
 
   /// Stream given columns from all rows in table.
-  /** The table name cannot include a schema name.  If you need to specify a
-   * schema name, stream from a query rather than from a table.
-   */
   template<typename Columns>
   stream_from(
     transaction_base &tx, from_table_t, std::string_view table,
@@ -125,6 +145,7 @@ public:
   [[deprecated("Use the from_table_t overload instead.")]] stream_from(
     transaction_base &, std::string_view table, Iter columns_begin,
     Iter columns_end);
+  //@}
 
   ~stream_from() noexcept;
 
@@ -156,6 +177,7 @@ public:
   template<typename... Vs>
   stream_from &operator>>(std::variant<Vs...> &) = delete;
 
+  // TODO: Hide this from the public.
   /// Iterate over this stream.  Supports range-based "for" loops.
   /** Produces an input iterator over the stream.
    *
